--- a/indexseccion1.html
+++ b/indexseccion1.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Reto2</title>
     <link rel="stylesheet" href="styleseccion1.css" />
+    <link rel="stylesheet" href="styleseccion1media.css" />
   </head>
   <body>
     <header>
@@ -18,7 +19,9 @@
         <li class="barra__opciones">Developers</li>
         <li class="barra__opciones">Resources</li>
         <li class="barra__opciones">Pricing</li>
-        <li class="barra__opciones"><button id="Sign">Sign In</button></li>
+        <li class="barra__opciones">
+          <button class="boton__sing">Sign In</button>
+        </li>
         <li class="menu__hamburguesa">
           <button>
             <div class="lineas"></div>
@@ -29,19 +32,13 @@
       </ul>
     </header>
 
-    <main>
-      <div class="main">
-        <section class="contenedor1">
+    <main class="main">
+      <section class="contenedor1">
+        <div>
           <h1 class="titulo__principal">
             Payments
             <br />infrastructure <br />for the world
           </h1>
-
-          <img
-            class="hero__phone"
-            src="../../imagenesreto2/hero-phone.png"
-            alt="hero-phone"
-          />
 
           <p class="parrafo1">
             Tons of companies all over the world use Swipe´s seamless platform
@@ -64,39 +61,38 @@
               />
             </button>
           </div>
-        </section>
+        </div>
+        <div>
+          <img
+            class="hero__phone"
+            src="../../imagenesreto2/hero-phone.png"
+            alt="hero-phone"
+          />
+        </div>
+      </section>
 
-        <section class="lista__iconos">
-          <img
-            src="../../imagenesreto2/instacart.png"
-            alt="instacart"
-            class="iconos"
-          />
-          <img
-            src="../../imagenesreto2/salesforce.png"
-            alt="salesforce"
-            class="iconos"
-          />
-          <img
-            src="../../imagenesreto2/amazon.png"
-            alt="amazon"
-            class="iconos"
-          />
-          <img src="../../imagenesreto2/slack.png" alt="slack" class="iconos" />
-          <img
-            src="../../imagenesreto2/shopify.png"
-            alt="shopify"
-            class="iconos"
-          />
-          <img
-            src="../../imagenesreto2/google.png"
-            alt="google"
-            class="iconos"
-          />
-          <img src="../../imagenesreto2/lyft.png" alt="lyft" class="iconos" />
-          <img src="../../imagenesreto2/zoom.png" alt="zoom" class="iconos" />
-        </section>
-      </div>
+      <section class="lista__iconos">
+        <img
+          src="../../imagenesreto2/instacart.png"
+          alt="instacart"
+          class="iconos"
+        />
+        <img
+          src="../../imagenesreto2/salesforce.png"
+          alt="salesforce"
+          class="iconos"
+        />
+        <img src="../../imagenesreto2/amazon.png" alt="amazon" class="iconos" />
+        <img src="../../imagenesreto2/slack.png" alt="slack" class="iconos" />
+        <img
+          src="../../imagenesreto2/shopify.png"
+          alt="shopify"
+          class="iconos"
+        />
+        <img src="../../imagenesreto2/google.png" alt="google" class="iconos" />
+        <img src="../../imagenesreto2/lyft.png" alt="lyft" class="iconos" />
+        <img src="../../imagenesreto2/zoom.png" alt="zoom" class="iconos" />
+      </section>
 
       <div class="contenedor__seccion2">
         <section class="seccion2">
@@ -106,24 +102,27 @@
             All the payment products you'll ever need
           </h2>
 
-          <p class="parrafo__seccion2">
-            We've got everything you'll need and more to build websites and apps
-            that handle payments, payouts, and much more.Swipe's products power
-            payments for
-            <span class="parrafo-renglon">all kinds of retailers</span>,
-            <span class="parrafo-renglon">all kinds of businesses</span>,
-            <span class="parrafo-renglon">softwareplatforms & markeplace</span>,
-            and everything in between.
-          </p>
+          <div class="parrafos__seccion2">
+            <p class="parrafo__seccion2">
+              We've got everything you'll need and more to build websites and
+              apps that handle payments, payouts, and much more.Swipe's products
+              power payments for
+              <span class="parrafo-renglon">all kinds of retailers</span>,
+              <span class="parrafo-renglon">all kinds of businesses</span>,
+              <span class="parrafo-renglon">softwareplatforms & markeplace</span
+              >, and everything in between.
+            </p>
 
-          <p class="parrafo__seccion2">
-            We also help companies
-            <span class="parrafo-renglon">tackle fraud</span>,
-            <span class="parrafo-renglon">issue invoices</span>,
-            <span class="parrafo-renglon">send virtual and physical cards</span
-            >, <span class="parrafo-renglon">manage financing</span>,
-            <span>wrangle business spend</span>, and much more.
-          </p>
+            <p class="parrafo__seccion2">
+              We also help companies
+              <span class="parrafo-renglon">tackle fraud</span>,
+              <span class="parrafo-renglon">issue invoices</span>,
+              <span class="parrafo-renglon"
+                >send virtual and physical cards</span
+              >, <span class="parrafo-renglon">manage financing</span>,
+              <span>wrangle business spend</span>, and much more.
+            </p>
+          </div>
 
           <button class="boton__star2">
             Start now
@@ -169,63 +168,84 @@
         <div class="diagonal-azul"></div>
 
         <div class="contenedor__seccion3">
-          <h2 class="subtitulo__seccion3">Designed For Engineers</h2>
-          <h2 class="titulo__seccion3">
-            The world's best and most intuitive APIs
-          </h2>
+          <div>
+            <h2 class="subtitulo__seccion3">Designed For Engineers</h2>
+            <h2 class="titulo__seccion3">
+              The world's best and most intuitive APIs
+            </h2>
 
-          <p class="parrafo__seccion3">
-            We abstract the hard stuff away so your teams don't can focus on
-            builing good technology, instead of spending time and money
-            reinventing the wheel.
-          </p>
+            <p class="parrafo__seccion3">
+              We abstract the hard stuff away so your teams don't can focus on
+              builing good technology, instead of spending time and money
+              reinventing the wheel.
+            </p>
 
-          <button class="boton__star3">
-            Start now
-            <img
-              src="./imagenesreto2/arrow-right-dark.svg"
-              alt="flecha Start"
-            />
-          </button>
-
+            <button class="boton__star3">
+              Start now
+              <img
+                src="./imagenesreto2/arrow-right-dark.svg"
+                alt="flecha Start"
+              />
+            </button>
+          </div>
           <img
-            src="./imagenesreto2/tools-icon.png"
-            alt="icono tools"
-            class="iconos__seccion3"
+            src="./imagenesreto2/api-code.png"
+            alt="icono api-code"
+            class="imagenes__seccion3"
           />
 
-          <h4 class="titulos__iconos3">Tools for all stacks</h4>
+          <div class="subgrid">
+            <div>
+              <img
+                src="./imagenesreto2/tools-icon.png"
+                alt="icono tools"
+                class="iconos__seccion3"
+              />
 
-          <p class="parrafos__seccion3">
-            We offer front end and back end libraries in some of the most widely
-            used technologies, old and new.
-          </p>
+              <h4 class="titulos__iconos3">Tools for all stacks</h4>
 
-          <button class="direccionador__seccion3">
-            See libraries
-            <img src="./imagenesreto2/arrow-right-blue.svg" alt="flecha See" />
-          </button>
+              <p class="parrafos__seccion3">
+                We offer front end and back end libraries in some of the most
+                widely used technologies, old and new.
+              </p>
 
+              <button class="direccionador__seccion3">
+                See libraries
+                <img
+                  src="./imagenesreto2/arrow-right-blue.svg"
+                  alt="flecha See"
+                />
+              </button>
+            </div>
+
+            <div>
+              <img
+                src="./imagenesreto2/cube-icon.png"
+                alt="icono custom"
+                class="iconos__seccion3"
+              />
+
+              <h4 class="titulos__iconos3">Custom Integrations</h4>
+
+              <p class="parrafos__seccion3">
+                Use intregations for systems like Shopify, WooCommerce,
+                NetSuite, and more.
+              </p>
+
+              <button class="direccionador__seccion3">
+                Explore partners
+                <img
+                  src="./imagenesreto2/arrow-right-blue.svg"
+                  alt="flecha Explore"
+                />
+              </button>
+            </div>
+          </div>
           <img
-            src="./imagenesreto2/cube-icon.png"
-            alt="icono custom"
-            class="iconos__seccion3"
+            src="./imagenesreto2/terminal-code.png"
+            alt="icono terminal-code"
+            class="imagenes__seccion3"
           />
-
-          <h4 class="titulos__iconos3">Custom Integrations</h4>
-
-          <p class="parrafos__seccion3">
-            Use intregations for systems like Shopify, WooCommerce,NetSuite, and
-            more.
-          </p>
-
-          <button class="direccionador__seccion3">
-            Explore partners
-            <img
-              src="./imagenesreto2/arrow-right-blue.svg"
-              alt="flecha Explore"
-            />
-          </button>
         </div>
       </section>
 
@@ -235,58 +255,66 @@
         <h2 class="titulo__seccion4">A tech-first approach to finance</h2>
 
         <div class="contenedor__iconos4">
-          <img
-            src="./imagenesreto2/cloud-icon.png"
-            alt="icono Efficient"
-            class="iconos__seccion4"
-          />
+          <div>
+            <img
+              src="./imagenesreto2/cloud-icon.png"
+              alt="icono Efficient"
+              class="iconos__seccion4"
+            />
 
-          <h4 class="titulos__iconos">Efficient Always</h4>
+            <h4 class="titulos__iconos">Efficient Always</h4>
 
-          <p class="seccion4__parrafo">
-            we've optimized every level of the finance stack, from integrations
-            to prebuilt checkout flows - no detail has been spared.
-          </p>
+            <p class="seccion4__parrafo">
+              we've optimized every level of the finance stack, from
+              integrations to prebuilt checkout flows - no detail has been
+              spared.
+            </p>
+          </div>
+          <div>
+            <img
+              src="./imagenesreto2/cycle-icon.png"
+              alt="icono Fast"
+              class="iconos__seccion4"
+            />
 
-          <img
-            src="./imagenesreto2/cycle-icon.png"
-            alt="icono Fast"
-            class="iconos__seccion4"
-          />
+            <h4 class="titulos__iconos">Fast-Improving</h4>
 
-          <h4 class="titulos__iconos">Fast-Improving</h4>
+            <p class="seccion4__parrafo">
+              We make constant updates and improvements to help you stay on the
+              cutting edge of your industry, deploying to production around 20x
+              per day!
+            </p>
+          </div>
 
-          <p class="seccion4__parrafo">
-            We make constant updates and improvements to help you stay on the
-            cutting edge of your industry, deploying to production around 20x
-            per day!
-          </p>
+          <div>
+            <img
+              src="./imagenesreto2/shield-icon.png"
+              alt="icono Tried"
+              class="iconos__seccion4"
+            />
 
-          <img
-            src="./imagenesreto2/shield-icon.png"
-            alt="icono Tried"
-            class="iconos__seccion4"
-          />
+            <h4 class="titulos__iconos">Tried and true</h4>
 
-          <h4 class="titulos__iconos">Tried and true</h4>
+            <p class="seccion4__parrafo">
+              Our systems operative with 100% uptime,with scalability and
+              uptimes as a guarantee. Swipe is super duper certified so don't
+              worry
+            </p>
+          </div>
+          <div>
+            <img
+              src="./imagenesreto2/bars-icon.png"
+              alt="icono Crazy"
+              class="iconos__seccion4"
+            />
 
-          <p class="seccion4__parrafo">
-            Our systems operative with 100% uptime,with scalability and uptimes
-            as a guarantee. Swipe is super duper certified so don't worry
-          </p>
+            <h4 class="titulos__iconos">Crazy Optimized</h4>
 
-          <img
-            src="./imagenesreto2/bars-icon.png"
-            alt="icono Crazy"
-            class="iconos__seccion4"
-          />
-
-          <h4 class="titulos__iconos">Crazy Optimized</h4>
-
-          <p class="seccion4__parrafo">
-            We use machine learning trained on billions of datapoinst to help
-            optimize all products, from fraud to revenue recovery and more.
-          </p>
+            <p class="seccion4__parrafo">
+              We use machine learning trained on billions of datapoinst to help
+              optimize all products, from fraud to revenue recovery and more.
+            </p>
+          </div>
         </div>
       </section>
 
@@ -313,29 +341,39 @@
             <span class="parrafo-renglon5">and everything in between.</span>
           </p>
 
-          <h3 class="indicadores__seccion5">250M+</h3>
+          <div class="contendor__indicadores5">
+            <div>
+              <h3 class="indicadores__seccion5">250M+</h3>
 
-          <p class="parrafo__indicadores5">
-            API requests each day, peaking at 15,000 requests a second.
-          </p>
+              <p class="parrafo__indicadores5">
+                API requests each day, peaking at 15,000 requests a second.
+              </p>
+            </div>
 
-          <h3 class="indicadores__seccion5">97%</h3>
+            <div>
+              <h3 class="indicadores__seccion5">97%</h3>
 
-          <p class="parrafo__indicadores5">
-            of US adults have bought from businesses that use Swipe
-          </p>
+              <p class="parrafo__indicadores5">
+                of US adults have bought from businesses that use Swipe
+              </p>
+            </div>
 
-          <h3 class="indicadores__seccion5">135+</h3>
+            <div>
+              <h3 class="indicadores__seccion5">135+</h3>
 
-          <p class="parrafo__indicadores5">
-            currencies and payment methods supported
-          </p>
+              <p class="parrafo__indicadores5">
+                currencies and payment methods supported
+              </p>
+            </div>
 
-          <h3 class="indicadores__seccion5">35+</h3>
+            <div>
+              <h3 class="indicadores__seccion5">35+</h3>
 
-          <p class="parrafo__indicadores5">
-            countries with local, acquiring, optimizing acceptance rates
-          </p>
+              <p class="parrafo__indicadores5">
+                countries with local, acquiring, optimizing acceptance rates
+              </p>
+            </div>
+          </div>
         </div>
       </section>
     </main>
