--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <div class="fondo__diagonal"></div>
       <ul class="barra">
         <li class="imagen__skipe">
-          <img src="../../imagenesreto2/logo-white.svg" alt="logo skipe" />
+          <img src="./imagenesreto2/logo-white.svg" alt="logo skipe" />
         </li>
         <li class="barra__opciones">Products</li>
         <li class="barra__opciones">Solutions</li>
@@ -49,14 +49,14 @@
             <button class="boton__start">
               Start now
               <img
-                src="../../imagenesreto2/arrow-right-light.svg"
+                src="./imagenesreto2/arrow-right-light.svg"
                 alt="iconoflecha"
               />
             </button>
             <button class="boton__contact">
               Contact sales
               <img
-                src="../../imagenesreto2/arrow-right-purple.svg"
+                src="./imagenesreto2/arrow-right-purple.svg"
                 alt="iconoflecha"
               />
             </button>
@@ -65,7 +65,7 @@
         <div>
           <img
             class="hero__phone"
-            src="../../imagenesreto2/hero-phone.png"
+            src="./imagenesreto2/hero-phone.png"
             alt="hero-phone"
           />
         </div>
@@ -73,25 +73,25 @@
 
       <section class="lista__iconos">
         <img
-          src="../../imagenesreto2/instacart.png"
+          src="./imagenesreto2/instacart.png"
           alt="instacart"
           class="iconos"
         />
         <img
-          src="../../imagenesreto2/salesforce.png"
+          src="./imagenesreto2/salesforce.png"
           alt="salesforce"
           class="iconos"
         />
-        <img src="../../imagenesreto2/amazon.png" alt="amazon" class="iconos" />
-        <img src="../../imagenesreto2/slack.png" alt="slack" class="iconos" />
+        <img src="./imagenesreto2/amazon.png" alt="amazon" class="iconos" />
+        <img src="./imagenesreto2/slack.png" alt="slack" class="iconos" />
         <img
-          src="../../imagenesreto2/shopify.png"
+          src="./imagenesreto2/shopify.png"
           alt="shopify"
           class="iconos"
         />
-        <img src="../../imagenesreto2/google.png" alt="google" class="iconos" />
-        <img src="../../imagenesreto2/lyft.png" alt="lyft" class="iconos" />
-        <img src="../../imagenesreto2/zoom.png" alt="zoom" class="iconos" />
+        <img src="./imagenesreto2/google.png" alt="google" class="iconos" />
+        <img src="./imagenesreto2/lyft.png" alt="lyft" class="iconos" />
+        <img src="./imagenesreto2/zoom.png" alt="zoom" class="iconos" />
       </section>
 
       <div class="contenedor__seccion2">
